--- a/css/styles.css
+++ b/css/styles.css
@@ -105,7 +105,7 @@ address {
 }
 
 .nav-link:hover,
-.nav-link:active {
+.nav-link:focus {
   color: var(--axcent);
 }
 
@@ -132,7 +132,8 @@ address {
 
 .nav-link {
   color: var(--main-text-color);
-  display: block;
+  display: flex;
+  align-items: center;
   padding-top: 32px;
   padding-bottom: 32px;
   font-size: 14px;
@@ -157,7 +158,7 @@ address {
 }
 
 .contact-link:hover .contact-link-icon,
-.contact-link:active .contact-link-icon {
+.contact-link:focus .contact-link-icon {
   fill: var(--axcent);
 }
 
@@ -206,11 +207,6 @@ address {
 }
 
 /* advantages */
-
-.advantages-item {
-  display: flex;
-  flex-direction: column;
-}
 
 .advantages-icon-container {
   height: 120px;
@@ -342,7 +338,7 @@ address {
 }
 
 .social-link:hover,
-.social-link:active {
+.social-link:focus {
   border-radius: 50%;
   background-color: var(--axcent);
 }
@@ -354,7 +350,7 @@ address {
 }
 
 .social-link:hover .social-icon,
-.social-link:active .social-icon {
+.social-link:focus .social-icon {
   fill: var(--main-background-color);
 }
 
@@ -368,8 +364,6 @@ address {
 .client-item {
   width: 170px;
   height: 92px;
-  border: 1px solid #afb1b8;
-  border-radius: 4px;
 }
 
 .client-link {
@@ -378,6 +372,8 @@ address {
   display: flex;
   align-items: center;
   justify-content: center;
+  border: 1px solid #afb1b8;
+  border-radius: 4px;
 }
 
 .client-icon {
@@ -386,8 +382,8 @@ address {
   fill: #afb1b8;
 }
 
-.client-icon:hover,
-.client-icon:active {
+.client-link:hover .client-icon,
+.client-link:focus .client-icon {
   fill: var(--axcent);
 }
 
@@ -425,7 +421,7 @@ address {
 }
 
 .footer-address-link:hover,
-.footer-address-link:active {
+.footer-address-link:focus {
   color: var(--axcent);
 }
 
@@ -438,7 +434,7 @@ address {
 }
 
 .footer-contact-link:hover,
-.footer-contact-link:active {
+.footer-contact-link:focus {
   color: var(--axcent);
 }
 
@@ -452,8 +448,12 @@ address {
 }
 
 .social-link.footer-socials:hover,
-.social-link.footer-socials:active {
+.social-link.footer-socials:focus {
   background-color: var(--axcent);
+}
+
+.footer-socials > .social-icon {
+  fill: var(--main-background-color);
 }
 
 .socials-text {
@@ -486,7 +486,6 @@ address {
 }
 
 .button:hover,
-.button:active,
 .button:focus {
   color: var(--text-white);
   background-color: var(--axcent);
@@ -511,17 +510,21 @@ address {
   border-radius: 0px;
 }
 
-.case-item:hover,
-.case-item:active {
+/* .case-link:hover .case-item,
+.case-link:focus .case-item {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+} */
+
+.case-link:hover,
+.case-link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
-/* .case-link:hover .case-item,
-.case-link:active .case-item {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
-} */
+.case-link {
+  display: block;
+}
 
 .case-title {
   font-size: 18px;
